syntax = "proto3";

package auth;

option go_package = "github.com/fusionharbor/microservices/api/auth";

service AuthService {
  rpc Login(LoginRequest) returns (LoginResponse);
  rpc GetUser(GetUserRequest) returns (GetUserResponse);
  rpc GetUsers(GetUsersRequest) returns (GetUsersResponse);
  rpc CreateUser(CreateUserRequest) returns (CreateUserResponse);
}

message LoginRequest {
  string username = 1;
  string password = 2;
}

message LoginResponse {
  string token = 1;
  string message = 2;
}

message GetUserRequest {
  string id = 1;
  string token = 2;
}

message GetUsersRequest {
  string token = 2;
}

message GetUserResponse {
  User user = 1;
}

message GetUsersResponse {
  repeated User users = 1;
}

message CreateUserRequest {
  string username = 1;
  string email = 2;
  string password = 3;
  string role = 4;
}

message CreateUserResponse {
  string id = 1;
  string message = 2;
}

message User {
  string id = 1;
  string username = 2;
  string password = 3;
  string email = 4;
  string role = 5;
}